@@ -56,6 +56,7 @@ The extension sets the following bnd parameters;
 * Bundle-Description defaults to the project description.
 * -classpath is set to the compile target directory and any compile time
   dependencies.
+* Include-Resource defaults to the dir project.resources.target if it exists.
 
 == Parameters
 
